2005-06-27 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc, src/stimuli.h:
	Added putState()/getState() methods and removed putDrivingState
	method from the stimulus class. The purpose of this is to abstract
	away whether a node is driving or not. The main affect is in the
	gui breadboard where the state of I/O pins is queried.
	* gui/gui_breadboard.cc, gui/gui_breadboard.h, modules/usart.cc,
	modules/video.cc, modules/video.h, src/14bit-tmrs.cc,
	src/i2c-ee.cc, src/ssp.cc, 
	src/uart.cc: Updated calls to new stimulus class API.
	* modules/logic.cc, modules/logic.h: The logic gate modules had
	bit rotted. 

2005-06-26 J.R. Heisey <jrheisey@sourceforge.com>
	* plat/win32/gpsim.def, src/processor.cc, src/processor.h:
	New function Processor::init_program_memory_at_index() to
	continue the separation of PM address from PM array index.

2005-06-26 Scott Dattalo <scott@dattalo.com>
	* src/trace.cc: The wrong variable was being used to index the
	program counter array. This caused the trace to get an invalid
	instruction.

2005-06-26 Scott Dattalo <scott@dattalo.com>
	* INSTALL: Added notes from Bas Wijnen regarding Debian.

2005-06-25 Scott Dattalo <scott@dattalo.com>
	* src/symbol.cc, regression/simulate: The new 'BITS' indicator for
	register symbol queries broke the regression test. Now, the BITS
	indicator is only displayed if only a portion of the register
	applies to a register symbol. 

2005-06-24 J.R. Heisey <jrheisey@sourceforge.com>
	* src/modules.cc: Fixed a bug in Module::get() where
	a derive class does not override this function, now
	this function will return a null string.
	This fixes problems when a derived class is being
	displayed in the GUI symbol window causing a UTF-8
	warning.
	* src/symbol.cc: Fixed an introduced null pointer
	exception.

2005-06-23 J.R. Heisey <jrheisey@sourceforge.com>
	* plat/win32/gpsim.def, src/symbol.cc, src/symbol.h:
	register_symbol::m_uMask is used to mask out bits not